# OseenRBFFD

./: .gitignore  CMakeLists.txt  README.md  h2libext.h
Extensions/: CMakeLists.txt
Extensions/auxiliaries/: CMakeLists.txt  aux_eigen.hpp  aux_h2lib.cpp  aux_h2lib.h  aux_medusa.cpp  aux_medusa.hpp  polyhedron_integration.cpp  polyhedron_integration.h  spmatrix_medusa.cpp  spmatrix_medusa.h
Extensions/cluster/: admissible.cpp  admissible.h  oseencluster.cpp  oseencluster.h
Extensions/oseen_weights_rbffd/: rbffd_discretization.hpp  set_weights.hpp
Extensions/preconditioning/: block_diagonal.cpp  block_diagonal.h  hlu.cpp  hlu.h  prec.h
Extensions/solver/: bicgstab.cpp  bicgstab.h  gmres.cpp  gmres.h  solver.h
Extensions/sparse/: CMakeLists.txt  sparse_compression.cpp  sparse_compression.h  spmatrix.cpp  spmatrix.h
H2Lib/: CMakeLists.txt  h2lib.h
H2Lib/Examples/: CMakeLists.txt  example_hmatrix_bem3d.c
H2Lib/Tests/: CMakeLists.txt
medusa/: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  LICENSE  README.md  run_tests.py
medusa/docs/: .cproject  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  concepts.dox  customdoxygen.css  header.html  mainpage.dox  mathjax_commands.js  modules.dox
medusa/examples/: .cproject  CMakeLists.txt  README.md
medusa/examples/3d_objects/: .cproject  .project  CMakeLists.txt  bunny_poisson.cpp  bunny_poisson_plot.m  read_off.m
medusa/examples/advection_diffusion/: .cproject  .project  CMakeLists.txt  web_example.cpp  web_example_1d.m  web_example_2d.m  web_example_3d.m
medusa/examples/cahnHilliard_equation/: .cproject  .project  BiharmonicOp.hpp  CMakeLists.txt  cahnHilliard_explicit.cpp  cahnHilliard_implicit.cpp  cahnHilliard_visualization.m
medusa/examples/coupled_domains/: .cproject  .project  CMakeLists.txt  poisson_coupled_domains.cpp  poisson_coupled_domains.m
medusa/examples/customization/: .cproject  .project  CMakeLists.txt  biharmonic.nb  custom_operators_biharmonic.cpp  custom_operators_biharmonic_plot.m  custom_rbf.cpp  custom_rbf_plot.m  custom_stencils_visibility.cpp  custom_stencils_visibility_plot.m
medusa/examples/electromagnetic_scattering/: .cproject  .project  CMakeLists.txt  anisotropic_cylinder.cpp  anisotropic_cylinder.m  dielectric_cylinder.cpp  dielectric_cylinder.m  dielectric_cylinder.xml
medusa/examples/ghost_nodes/: .cproject  .project  CMakeLists.txt  poisson_mixed_3D_ghost.cpp  poisson_mixed_3D_ghost.m
medusa/examples/inside_by_oversampling/: .cproject  .project  CMakeLists.txt  inside_by_oversampling.cpp  inside_by_oversampling.m
medusa/examples/linear_elasticity/: .cproject  .project  CMakeLists.txt  cantilever_beam.cpp  cantilever_beam.m  cantilever_beam.nb  fretting_fatigue.cpp  fretting_fatigue.ipynb  point_contact2d.cpp  point_contact2d.m  point_contact2d.nb  point_contact3d.cpp  point_contact3d.m  point_contact3d.nb  point_contact3d.xml
medusa/examples/nonNewtonian_fluid/: .cproject  .project  CMakeLists.txt  nonNewtonian_fluid.cpp  nonNewtonian_fluid.m
medusa/examples/poisson_equation/: .cproject  .project  CMakeLists.txt  parametric_domain_2D.cpp  parametric_domain_2D.m  poisson_NURBS_2D.cpp  poisson_NURBS_2D.m  poisson_dirichlet_1D.cpp  poisson_dirichlet_1D.m  poisson_dirichlet_2D.cpp  poisson_dirichlet_2D.m  poisson_dirichlet_2D_refined.cpp  poisson_dirichlet_2D_refined.m  poisson_dirichlet_3D.cpp  poisson_dirichlet_3D.m  poisson_dirichlet_3D_irregular.cpp  poisson_dirichlet_3D_irregular.m  poisson_dirichlet_3D_irregular_params.xml  poisson_mixed_2D.cpp  poisson_mixed_2D.m  poisson_mixed_2D_RBFFD.cpp  poisson_mixed_2D_RBFFD.m  poisson_mixed_2D_circular.cpp  poisson_mixed_2D_circular.m  poisson_mixed_2D_irregular.cpp  poisson_mixed_2D_irregular.m  poisson_neumann_2D.cpp  poisson_neumann_2D.m  quadrupole.cpp  quadrupole.m  triceratops.cpp  triceratops.m
medusa/examples/quantum_mechanics/: .project  CMakeLists.txt  infinite_well_2D.cpp  infinite_well_2D.m  infinite_well_3D.cpp  infinite_well_3D.m
medusa/examples/thermo_fluid/: .cproject  .project  CMakeLists.txt  dvd_imp_phs_2D.cpp  dvd_imp_phs_2D_plot.m  lid_driven_acm_2D.cpp  lid_driven_acm_2D_plot.m
medusa/examples/wave_equation/: .cproject  .project  CMakeLists.txt  wave_equation_2D.cpp  wave_equation_2D.m
medusa/include/medusa/: Approximations.hpp  Approximations_fwd.hpp  Config.hpp  Domain.hpp  Domain_fwd.hpp  IO.hpp  Integrators.hpp  Interpolants.hpp  Interpolants_fwd.hpp  Medusa.hpp  Medusa_fwd.hpp  Operators.hpp  Types.hpp  Types_fwd.hpp  Utils.hpp
medusa/include/nanoflann/: nanoflann.hpp
medusa/include/rapidxml/: rapidxml_print.hpp
medusa/scripts/: check_style.py  configure.py  configure.sh  cpplint.py  deploy.sh  make_docs.py  medusa.cmake  mesher.nb  run_examples.py
medusa/src/: .cproject  CMakeLists.txt
medusa/src/approximations/: .cproject  .project  CMakeLists.txt  Gaussian.cpp  InverseMultiquadric.cpp  JacobiSVDWrapper.cpp  Monomials.cpp  Multiquadric.cpp  Polyharmonic.cpp  RBFBasis.cpp  RBFFD.cpp  RBFInterpolant.cpp  ScaleFunction.cpp  WLS.cpp  WLSApproximant.cpp  WeightFunction.cpp
medusa/src/domains/: .cproject  .project  BallShape.cpp  BasicRelax.cpp  BoxShape.cpp  CMakeLists.txt  DomainDiscretization.cpp  DomainShape.cpp  FindBalancedSupport.cpp  FindClosest.cpp  GeneralFill.cpp  GeneralSurfaceFill.cpp  GrainDropFill.cpp  GridFill.cpp  HalfLinksRefine.cpp  NURBSPatch.cpp  NURBSShape.cpp  PolygonShape.cpp  PolyhedronShape.cpp  PolytopeShape.cpp  RotatedShape.cpp  STLShape.cpp  ShapeDifference.cpp  ShapeUnion.cpp  TranslatedShape.cpp  UnknownShape.cpp  cad_helpers.cpp  compute_normal.cpp
medusa/src/integrators/: .cproject  .project  AdamsBashforth.cpp  CMakeLists.txt  RKExplicit.cpp
medusa/src/interpolants/: .cproject  .project  CMakeLists.txt  PUApproximant.cpp  Sheppard.cpp
medusa/src/io/: .cproject  .project  CMakeLists.txt  CSV.cpp  HDF.cpp  STL.cpp  XML.cpp  ioformats.cpp
medusa/src/operators/: .cproject  .project  CMakeLists.txt  ExplicitOperators.cpp  ExplicitVectorOperators.cpp  computeShapes.cpp  (+4 more)
medusa/test/: .cproject  CMakeLists.txt  test_hdf_compile.cpp
(+301 files in other folders)
